<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

      <Button
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:id="@+id/menu"
            android:text="@string/menu_title" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/title"
            android:textSize="25sp"
            android:layout_marginLeft="230dp"
            android:textColor="#FFD700"
            android:layout_gravity="center_horizontal"
            android:text="@string/title" />
         <Button
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="230dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="right"
            android:id="@+id/search"
            android:text="@string/search_title" />   

</LinearLayout>