<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/back_layout"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:background="@drawable/action_bar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_gravity="center_vertical"
            android:text="@string/back"/>
    </LinearLayout>
    <TextView 
        android:id="@+id/emulator_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/back_layout"
        android:layout_marginTop="70dip"
        android:text="@string/emulator_title"
        android:textSize="20dip"
        android:textStyle="bold"
        />
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/version_inf"
        android:layout_below="@+id/emulator_title"
        android:textSize="10dip"
        />

</RelativeLayout>