<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/allgamelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/buttonlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/platform"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/platform"
            android:textColor="#666"
            android:textSize="15sp" />

        <Button
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/type"
            android:textColor="#666"
            android:textSize="12sp" />

        <Button
            android:id="@+id/language"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/language"
            android:textColor="#666"
            android:textSize="12sp"/>
    </LinearLayout>
    <ListView
        android:id="@+id/game_show_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:fastScrollEnabled="true"
        android:layout_below="@+id/buttonlayout"
        >
    </ListView>


</RelativeLayout>